--- a/backend/ChatPort.Data/ChatPort.Data.csproj
+++ b/backend/ChatPort.Data/ChatPort.Data.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ChatPort.Data.Contracts\ChatPort.Data.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
